Final_Project/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  display: flex;
  flex-direction: column;
}
/* all header things */

.header {
  background-color: darkgray;
  display: flex;
  border-style: dashed;
  justify-content: space-between;
  width: 100%;
  position: fixed;
  align-items: center;
  
}

h1{
    margin-left: 20px;
}

/* drop down menu stuff */
.menu{
    border-style: dashed;
    width: auto;
    display: flex;
    flex-direction: row;
    margin-right: 40px;
}

menu > li{
    display: inline;
}

menu > li:last-of-type{
    margin-right: 0px;
}

.dropdown{
    position: relative;
}

.dropdown > span{
    z-index: 2;
    position: relative;
    cursor: pointer;
}

.dropdown:hover .features_menu{ /* to style drop down menu*/
    display:flex;
    flex-direction: column;
    position: absolute;
    top: -25px;
    left: -30px;
    z-index: 1;
    padding-top: 60px;
    margin: 10px;
    background-color: azure;
    border-radius: 5px;
}

.features_menu{
    display:none;
}

.features_menu li{ /* to style drop down list items*/
    list-style: none;
    padding: 0px 40px 0px 20px; /* location of dropdown buttons */
    margin-bottom: 10px;
    margin-left: 10px;
    font-size:16px;
    text-align:left;
}

/* fixes line up issue with team drop down menu */
.team li{
    margin-left: 20px;
}

.menu_button{
    width: 100px;
    background-color: dimgrey;
    margin: 20px 40px;
    padding: 5px 10px;
    border-style: dotted;
    font-size:24px;
    border-radius: 15px;
    text-align:center;
}

li{
    list-style:none;
}


/* all main body styling */
.wrapper {
  display: flex;
  background-color:rgb(208, 208, 208);
  border-style: dashed;
  padding-top: 200px;
  height: 800px;
}

/* right side styling */
.right_side{
    background-color: darkgray;
    border-style: dashed;
    margin: 20px;
    border-radius: 10px;
    display: flex;
    flex-direction:column;
    height:fit-content;

}

/* driver ranking styling*/
.title{
    text-align: center;
    border-bottom: 2px;
    border-bottom-style: solid;
    padding: 10px;
}

.driver_info{
    display:flex;
    flex-direction:row;
    margin-bottom:20px;
}

.rank, .points{
    border: 2px;
    border-bottom-style: solid;
    padding: 10px;
}

.name{
    border:2px;
    border-style: solid;
    border-top-style: none;
    padding: 10px 40px;
}


/* left section styling*/
.left_side {
  display: flex;
  flex-direction: column;
  border-style: dashed;
  margin: 20px;
  width: 75%;
}

.box{
    display:flex;
    border-style: dashed;
    background-color:darkgray;
    margin: 10px;
    flex-direction: column;
    text-align: center;
    border-radius: 15px;
}

.info{
    display:flex;
    flex-direction: row;
    justify-content: space-between;
    margin-bottom: 10px;
    align-items: center;
    height: fit-content;
    border-top-style: solid;
    border-bottom-style: solid;
}

/* constructors box styling */
button{
    padding:5px;
    height: fit-content;
    background-color: aquamarine;
    border-radius: 5px;
    margin: 5px;
}

.box2{
    border-left-style: solid;
    width: 20%;
}

.box2:last-of-type{
    border-right-style: solid;
}

/* styling for next race box */

.box3{
    border-left-style: solid;
    width: 25%;
    text-align: center;
    height: 100px;
}

.box3:first-of-type{
    border-left-style:none;
}

.box3 h3{
    padding: 10px;
}

